--- a/ImageStitcher/MainWindow.xaml
+++ b/ImageStitcher/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ImageStitcher"
-        Title="Image Stitcher" FontSize="16" Width="1800" Height="800">
+        Title="Image Stitcher" FontSize="16" Width="1800" Height="800" Closed="Window_Closed">
     <DockPanel>
         <ToolBar DockPanel.Dock="Top" ToolBarTray.IsLocked="True">
             <Button Content="Open" Click="OpenImages" />
