--- a/ImageStitcher/MainWindow.xaml
+++ b/ImageStitcher/MainWindow.xaml
@@ -4,14 +4,22 @@
         xmlns:local="clr-namespace:ImageStitcher"
         Title="Image Stitcher" FontSize="16" Width="1800" Height="800" Closed="Window_Closed">
     <DockPanel>
-        <ToolBar DockPanel.Dock="Top" ToolBarTray.IsLocked="True">
+        <ToolBar DockPanel.Dock="Top" ToolBarTray.IsLocked="True" DataContext="{x:Static local:Settings.Default}">
             <Button Content="Open" Click="OpenImages" />
-            <Separator />
             <Button Content="Stitch" Click="StitchImages" />
+            <Separator />
+            <Slider VerticalAlignment="Center" Width="200" Minimum="5" Maximum="250" Value="{Binding Path=Threshold}" />
+            <TextBlock VerticalAlignment="Center" Text="{Binding Path=Threshold}" />
         </ToolBar>
         <UniformGrid Rows="1">
-            <local:ImageControl x:Name="SourceImageControl1" IsRoiEnabled="True" />
-            <local:ImageControl x:Name="SourceImageControl2" IsRoiEnabled="True" />
+            <Grid>
+                <local:ImageControl x:Name="SourceImageControl1" IsRoiEnabled="True" />
+                <Image Name="SourceRoiImageView1" Width="100" />
+            </Grid>
+            <Grid>
+                <local:ImageControl x:Name="SourceImageControl2" IsRoiEnabled="True" />
+                <Image Name="SourceRoiImageView2" Width="100" />
+            </Grid>
             <local:ImageControl x:Name="ResultImageControl" />
         </UniformGrid>
     </DockPanel>
